--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.application.name=312
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/312
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
